Bug 731613 - Don't track startup crashes when XRE_PROFILE_PATH is set (from restart or profile manager). r=Mossop

--HG--
extra : rebase_source : c16c158eeec49521f60b1afdfa32a64e9dbda2c7